content/v/25.12/deployment/docker-compose.md
+++
title = "Docker Compose"
weight = 4
+++

Docker Compose provides a straightforward way to deploy Zentinel with agents as containers. This guide covers local development and small production setups.

## Overview

```
┌──────────────────────────────────────────────────────────────┐
│                    docker-compose.yml                        │
│  ┌─────────────────────────────────────────────────────────┐│
│  │                    Network: zentinel                    ││
│  │                                                         ││
│  │  ┌──────────┐  ┌──────────┐  ┌──────────┐             ││
│  │  │ zentinel │  │   auth   │  │   waf    │             ││
│  │  │  :8080   │  │  :50051  │  │  :50052  │             ││
│  │  │  :9090   │  │          │  │          │             ││
│  │  └────┬─────┘  └────┬─────┘  └────┬─────┘             ││
│  │       │             │             │                    ││
│  │       └─────────────┴─────────────┘                    ││
│  │                  gRPC / UDS                            ││
│  └─────────────────────────────────────────────────────────┘│
│                                                              │
│  ┌──────────────────────────────────────────────────────────┐│
│  │  Volume: sockets (for Unix sockets)                     ││
│  │  Volume: config (configuration files)                   ││
│  └──────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────┘
```

## Quick Start

```yaml
# docker-compose.yml
version: "3.8"

services:
  zentinel:
    image: ghcr.io/zentinelproxy/zentinel:latest
    ports:
      - "8080:8080"   # HTTP
      - "9090:9090"   # Admin
    volumes:
      - ./config:/etc/zentinel:ro
      - sockets:/var/run/zentinel
    depends_on:
      - auth-agent
      - echo-agent
    networks:
      - zentinel

  auth-agent:
    image: ghcr.io/zentinelproxy/zentinel-auth:latest
    command: ["--socket", "/var/run/zentinel/auth.sock"]
    volumes:
      - sockets:/var/run/zentinel
    networks:
      - zentinel

  echo-agent:
    image: ghcr.io/zentinelproxy/zentinel-echo:latest
    command: ["--socket", "/var/run/zentinel/echo.sock"]
    volumes:
      - sockets:/var/run/zentinel
    networks:
      - zentinel

volumes:
  sockets:

networks:
  zentinel:
```

```bash
# Start everything
docker-compose up -d

# Check status
docker-compose ps

# View logs
docker-compose logs -f zentinel

# Stop
docker-compose down
```

## Unix Sockets vs gRPC

### Unix Sockets (Shared Volume)

Best for lowest latency when all containers run on the same host:

```yaml
services:
  zentinel:
    volumes:
      - sockets:/var/run/zentinel

  auth-agent:
    volumes:
      - sockets:/var/run/zentinel
    command: ["--socket", "/var/run/zentinel/auth.sock"]

volumes:
  sockets:
```

Configuration:
```kdl
agent "auth" type="auth" {
    unix-socket "/var/run/zentinel/auth.sock"
}
```

### gRPC (Network)

Best for scaling agents independently or running on different hosts:

```yaml
services:
  zentinel:
    depends_on:
      - waf-agent

  waf-agent:
    image: ghcr.io/zentinelproxy/zentinel-waf:latest
    command: ["--grpc", "0.0.0.0:50051"]
    networks:
      - zentinel
```

Configuration:
```kdl
agent "waf" type="waf" {
    grpc "http://waf-agent:50051"
}
```

## Complete Example

### Project Structure

```
zentinel-deploy/
├── docker-compose.yml
├── config/
│   └── zentinel.kdl
├── agents/
│   └── auth/
│       └── config.toml
└── certs/
    ├── cert.pem
    └── key.pem
```

### docker-compose.yml

```yaml
version: "3.8"

services:
  # ─────────────────────────────────────────────────────────
  # Zentinel Proxy
  # ─────────────────────────────────────────────────────────
  zentinel:
    image: ghcr.io/zentinelproxy/zentinel:latest
    container_name: zentinel
    ports:
      - "80:8080"
      - "443:8443"
      - "9090:9090"
    volumes:
      - ./config:/etc/zentinel:ro
      - ./certs:/etc/zentinel/tls:ro
      - sockets:/var/run/zentinel
    environment:
      - RUST_LOG=info
    depends_on:
      auth-agent:
        condition: service_healthy
      waf-agent:
        condition: service_healthy
    healthcheck:
      test: ["CMD", "curl", "-f", "http://localhost:9090/health"]
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - zentinel
      - backend

  # ─────────────────────────────────────────────────────────
  # Auth Agent (Unix Socket)
  # ─────────────────────────────────────────────────────────
  auth-agent:
    image: ghcr.io/zentinelproxy/zentinel-auth:latest
    container_name: zentinel-auth
    command:
      - "--socket"
      - "/var/run/zentinel/auth.sock"
      - "--config"
      - "/etc/auth/config.toml"
    volumes:
      - sockets:/var/run/zentinel
      - ./agents/auth:/etc/auth:ro
    environment:
      - RUST_LOG=info
      - AUTH_SECRET=${AUTH_SECRET}
    healthcheck:
      test: ["CMD", "test", "-S", "/var/run/zentinel/auth.sock"]
      interval: 5s
      timeout: 3s
      retries: 3
    restart: unless-stopped
    networks:
      - zentinel

  # ─────────────────────────────────────────────────────────
  # WAF Agent (gRPC)
  # ─────────────────────────────────────────────────────────
  waf-agent:
    image: ghcr.io/zentinelproxy/zentinel-waf:latest
    container_name: zentinel-waf
    command:
      - "--grpc"
      - "0.0.0.0:50051"
      - "--rules"
      - "/etc/waf/crs-rules"
    volumes:
      - ./agents/waf/rules:/etc/waf/crs-rules:ro
    environment:
      - RUST_LOG=info
    healthcheck:
      test: ["CMD", "grpc-health-probe", "-addr=:50051"]
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    networks:
      - zentinel

  # ─────────────────────────────────────────────────────────
  # Echo Agent (for debugging)
  # ─────────────────────────────────────────────────────────
  echo-agent:
    image: ghcr.io/zentinelproxy/zentinel-echo:latest
    container_name: zentinel-echo
    command: ["--grpc", "0.0.0.0:50052", "--verbose"]
    environment:
      - RUST_LOG=debug
    healthcheck:
      test: ["CMD", "grpc-health-probe", "-addr=:50052"]
      interval: 10s
      timeout: 5s
      retries: 3
    restart: unless-stopped
    profiles:
      - debug
    networks:
      - zentinel

  # ─────────────────────────────────────────────────────────
  # Example Backend
  # ─────────────────────────────────────────────────────────
  backend:
    image: nginx:alpine
    container_name: backend
    volumes:
      - ./backend/html:/usr/share/nginx/html:ro
    networks:
      - backend

volumes:
  sockets:
    driver: local

networks:
  zentinel:
    driver: bridge
  backend:
    driver: bridge
    internal: true
```

### config/zentinel.kdl

```kdl
server {
    listen "0.0.0.0:8080"
    listen "0.0.0.0:8443" {
        tls {
            cert "/etc/zentinel/tls/cert.pem"
            key "/etc/zentinel/tls/key.pem"
        }
    }
}

admin {
    listen "0.0.0.0:9090"
}

agents {
    agent "auth" type="auth" {
        unix-socket "/var/run/zentinel/auth.sock"
        events "request_headers"
        timeout-ms 50
        failure-mode "closed"
    }

    agent "waf" type="waf" {
        grpc "http://waf-agent:50051"
        events "request_headers" "request_body"
        timeout-ms 100
        failure-mode "open"
        max-request-body-bytes 1048576
    }

    agent "echo" type="custom" {
        grpc "http://echo-agent:50052"
        events "request_headers"
        timeout-ms 50
        failure-mode "open"
    }
}

upstreams {
    upstream "backend" {
        target "backend:80"
    }
}

routes {
    route "api" {
        matches { path-prefix "/api/" }
        upstream "backend"
        agents "auth" "waf"
    }

    route "default" {
        matches { path-prefix "/" }
        upstream "backend"
        agents "echo"
    }
}
```

## Development Setup

### Hot Reload with Local Build

```yaml
# docker-compose.dev.yml
version: "3.8"

services:
  zentinel:
    build:
      context: ../zentinel
      dockerfile: Dockerfile
    volumes:
      - ./config:/etc/zentinel:ro
      - sockets:/var/run/zentinel
    environment:
      - RUST_LOG=debug
    ports:
      - "8080:8080"
      - "9090:9090"

  auth-agent:
    build:
      context: ../zentinel
      dockerfile: agents/auth/Dockerfile
    volumes:
      - sockets:/var/run/zentinel
    command: ["--socket", "/var/run/zentinel/auth.sock"]

volumes:
  sockets:
```

```bash
# Build and run in development
docker-compose -f docker-compose.yml -f docker-compose.dev.yml up --build
```

### Debug Profile

```bash
# Start with echo agent for debugging
docker-compose --profile debug up -d

# Test with echo headers
curl -v http://localhost:8080/test
```

## Scaling

### Scale Agents

```bash
# Scale WAF agent replicas
docker-compose up -d --scale waf-agent=3
```

With load balancing in config:

```kdl
agent "waf" type="waf" {
    // Docker DNS handles round-robin
    grpc "http://waf-agent:50051"
}
```

### Multiple Zentinel Instances

```yaml
services:
  zentinel-1:
    image: ghcr.io/zentinelproxy/zentinel:latest
    ports:
      - "8081:8080"

  zentinel-2:
    image: ghcr.io/zentinelproxy/zentinel:latest
    ports:
      - "8082:8080"

  # HAProxy or Traefik in front
  lb:
    image: haproxy:latest
    ports:
      - "80:80"
    depends_on:
      - zentinel-1
      - zentinel-2
```

## Resource Limits

```yaml
services:
  zentinel:
    deploy:
      resources:
        limits:
          cpus: "2"
          memory: 1G
        reservations:
          cpus: "0.5"
          memory: 256M

  auth-agent:
    deploy:
      resources:
        limits:
          cpus: "0.5"
          memory: 128M
```

## Logging

### Centralized Logging

```yaml
services:
  zentinel:
    logging:
      driver: "json-file"
      options:
        max-size: "10m"
        max-file: "3"
        labels: "service"
    labels:
      service: "zentinel-proxy"

  # Or with Loki
  zentinel:
    logging:
      driver: loki
      options:
        loki-url: "http://loki:3100/loki/api/v1/push"
        loki-batch-size: "400"
```

### View Logs

```bash
# All services
docker-compose logs -f

# Specific service
docker-compose logs -f zentinel

# With timestamps
docker-compose logs -f -t zentinel

# Last 100 lines
docker-compose logs --tail=100 zentinel
```

## Health Checks

### Service Dependencies

```yaml
services:
  zentinel:
    depends_on:
      auth-agent:
        condition: service_healthy
      waf-agent:
        condition: service_started

  auth-agent:
    healthcheck:
      test: ["CMD", "test", "-S", "/var/run/zentinel/auth.sock"]
      interval: 5s
      timeout: 3s
      retries: 3
      start_period: 10s
```

### External Health Check

```bash
# Check Zentinel health
curl http://localhost:9090/health

# Check agent connectivity
curl http://localhost:9090/agents/health
```

## Production Considerations

### Security

```yaml
services:
  zentinel:
    security_opt:
      - no-new-privileges:true
    read_only: true
    tmpfs:
      - /tmp
    cap_drop:
      - ALL
    cap_add:
      - NET_BIND_SERVICE
```

### Secrets Management

```yaml
services:
  auth-agent:
    secrets:
      - auth_secret
    environment:
      - AUTH_SECRET_FILE=/run/secrets/auth_secret

secrets:
  auth_secret:
    file: ./secrets/auth.key
    # Or from external source
    # external: true
```

### TLS Configuration

```yaml
services:
  zentinel:
    volumes:
      - ./certs:/etc/zentinel/tls:ro
    environment:
      - ZENTINEL_TLS_CERT=/etc/zentinel/tls/cert.pem
      - ZENTINEL_TLS_KEY=/etc/zentinel/tls/key.pem
```

## Troubleshooting

### Container Won't Start

```bash
# Check logs
docker-compose logs auth-agent

# Run interactively
docker-compose run --rm auth-agent sh

# Check if socket exists
docker-compose exec zentinel ls -la /var/run/zentinel/
```

### Agent Connection Failed

```bash
# Check network connectivity
docker-compose exec zentinel ping waf-agent

# Test gRPC connection
docker-compose exec zentinel grpcurl -plaintext waf-agent:50051 list

# Check socket permissions
docker-compose exec zentinel ls -la /var/run/zentinel/
```

### Socket Permission Issues

```yaml
# Ensure same user in all containers
services:
  zentinel:
    user: "1000:1000"

  auth-agent:
    user: "1000:1000"
```

### Memory Issues

```bash
# Check memory usage
docker stats

# Increase limits if needed
docker-compose up -d --force-recreate
```
